<resources>
    <string name="app_name">FeedBack Form</string>
    <string name="title">cse</string>
    <string name="retrieve">retrieve</string>
    <string name="next">next</string>
    <string name="section">Select your section</string>
    <string name="go_back">go back</string>
    <string name="Answer">Answer</string>
    <string name="Average">What do you want ?</string>
    <string name="subject">Select subject : </string>

    <string name="Q1"> Interest generated by teacher : </string>
    <string name="Q2"> Units covered : </string>
    <string name="Q3"> Commitment of the teachers regularity and punctuality : </string>
    <string name="Q4"> Clarity and presentation of the subject : </string>
    <string name="Q5"> Knowledge of the subject : </string>
    <string name="Q6"> Uniform coverage of syllabus : </string>
    <string name="Q7"> Encouraging to ask students questions : </string>
    <string name="Q8"> Accessibility, friendliness and attitude outside the classroom : </string>
    <string name="Q9"> Challenging class tests : </string>
    <string name="Q10"> Overall opinion : </string>

    <string name="submit">submit</string>
    <string name="hint">Out of 4</string>
    <string name="notes">Excellent-4     Good-3     Satisfactory-2      Not so satisfactory-1      Not at all satisfactory-0</string>

    <string-array name="sections">

        <item>----</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>

    </string-array>

    <string-array name="lecturers">

        <item>MFCS</item>
        <item>FCE</item>
        <item>EMIII</item>
        <item>EEE</item>
        <item>STLD</item>
        <item>COMPI</item>
        <item>OOPJ</item>
        <item>EE Lab</item>
        <item>COMPI Lab</item>
        <item>OOPJ Lab</item>

    </string-array>

    <string-array name="details">

        <item>Interest generated</item>
        <item>Units covered</item>
        <item>Regularity and Punctuality</item>
        <item>Clarity</item>
        <item>Knowledge</item>
        <item>Syllabus</item>
        <item>Ask questions</item>
        <item>Attitude</item>
        <item>Class tests</item>
        <item>Overall opinion</item>
        <item>Total average</item>

    </string-array>

</resources>
