<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAF0"
    tools:context=".Form">

    <include
        android:id="@+id/toolbar2"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="536dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notes"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/Q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q1"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/A1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/Q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/A2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/Q3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q3"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/A3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/Q4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q4"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/A4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/Q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/A5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/Q6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q6"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/A6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/Q7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/A7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/Q8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q8"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/A8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/Q9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q9"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/A9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number" />

            <TextView
                android:id="@+id/Q10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q10"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/A10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>